- Update zoom out

--- a/src/components/RevolutHero/RevolutHero.css
+++ b/src/components/RevolutHero/RevolutHero.css
@@ -333,6 +333,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   z-index: 1;
+  transform-origin: center center;
+  will-change: transform, opacity;
 }
 
 .headline-container {
