--- a/src/components/RevolutHero/RevolutHero.css
+++ b/src/components/RevolutHero/RevolutHero.css
@@ -417,7 +417,7 @@ body {
   width: 120%;
   height: 120%;
   top: -10%;
-  left: -10%;
+  /* left: -10%; */
   object-fit: cover;
   transform-origin: center center;
 }
