- Update image path

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -20,7 +20,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../../assets/images/hero-background.jpg');
+    background-image: url('/images/hero-background.jpg');
     background-size: cover;
     background-position: center;
     opacity: 0.3;
