--- a/src/components/LuxryFrame/LuxryFrame.css
+++ b/src/components/LuxryFrame/LuxryFrame.css
@@ -18,7 +18,7 @@
 }
 
 :root {
-    --bg-hero: url('../../assets/images/hero-background.jpg');
+    --bg-hero: url('/images/hero-background.jpg');
 
 
     --primary: #0290C4;
