--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1711,6 +1711,29 @@ h1,h2,h3,h4,h5,h6 {
     max-width: 350px;
     margin: auto;
 }
+.logo-dark{
+    display: none;
+}
+.custom-header .logo-dark{
+    display: block;
+}
+.custom-header .logo-white{
+    display: none;
+}
+.ust-div {
+    border-radius: 50%;
+    overflow: hidden;
+    border: 1px solid rgb(107, 200, 172);
+}
+.person-card p {
+    font-size: 20px;
+}
+.page-banner img {
+    width: 100%;
+}
+.attach-box {
+    border: 2px dashed #D1D5DB !important;
+}
 /* Responsive Styles for Revolut Hero */
 @media screen and (max-width: 1654px) {
     .revolut-hero-image-main {
@@ -1885,7 +1908,12 @@ h1,h2,h3,h4,h5,h6 {
     .lfp-box h3 {
         font-size: 16px;
     }
-
+    .page-content h1 {
+        font-size: 30px;
+    }
+    .page-content p {
+        font-size: 16px;
+    }
 
 }
 
